crates/buff-lang-codegen-rust/tests/snapshots/format_codegen__csv_codegen_parse_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/format_codegen.rs
assertion_line: 591
expression: src
---
fn f() {
    {
        let mut __rdr = csv::ReaderBuilder::new()
            .has_headers(false)
            .from_reader("a,b\n1,2\n".to_string().as_bytes());
        __rdr
            .records()
            .filter_map(|r| r.ok())
            .map(|r| r.iter().map(|f| f.to_string()).collect::<Vec<String>>())
            .collect::<Vec<Vec<String>>>()
    };
}
