crates/buff-lang-codegen-rust/tests/snapshots/format_codegen__format_codegen_full_program_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/format_codegen.rs
assertion_line: 613
expression: src
---
fn main() {
    let m: std::collections::HashMap<String, i64> = serde_yml::from_str::<
        std::collections::HashMap<String, serde_yml::Value>,
    >("name: buff\n")
        .unwrap_or_default();
    serde_yml::to_string(&m).unwrap_or_default();
    let rows: Vec<Vec<String>> = {
        let mut __rdr = csv::ReaderBuilder::new()
            .has_headers(false)
            .from_reader("a,b\n1,2\n".as_bytes());
        __rdr
            .records()
            .filter_map(|r| r.ok())
            .map(|r| r.iter().map(|f| f.to_string()).collect::<Vec<String>>())
            .collect::<Vec<Vec<String>>>()
    };
    {
        let mut __wtr = csv::Writer::from_writer(Vec::<u8>::new());
        for __row in &rows {
            __wtr.write_record(__row.clone()).ok();
        }
        String::from_utf8(__wtr.into_inner().unwrap_or_default()).unwrap_or_default()
    };
}
