crates/buff-lang-codegen-rust/tests/snapshots/format_codegen__yaml_codegen_stringify_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/format_codegen.rs
assertion_line: 567
expression: src
---
fn f() {
    serde_yml::to_string(&m).unwrap_or_default();
}
